Start towards jumping to small multiple viewpoints on click. There are two major problems with current implementation. The first is that the second small multiple viewpoint is not set up yet (it is actually pretty tricky to get these viewpoints oriented correctly). The second is that sometimes the viewpoints get mixed up, expecially if clicking quickly. I think this comes down to weird effects of asynchronous function calls. There is no setView function for x3dom, so I loop through and call nextView and prevView multiple times to get to the desired view. I think this ocassionally screws up, but I am not sure exactly how to fix this yet.

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,12 @@ x3d {
 
 .small_multiples_chart {
   display: block;
-  height: 33%;
+  height: 33.3%;
+}
+
+.small_multiples_chart:hover {
+  background-color: #e1e1e1;
+  cursor: pointer;
 }
 
 
